message auth_initiator {
  required string initiator_guid=1;
  required int32 is_requesting_public_key=2;
  required int32 is_requesting_finish=3;
  required string initiator_public_key=4;
}
