message auth_receiver {
  required string receiver_guid=1;
  required int32 is_receiving_public_key=2;
  required int32 is_receiving_finish=3;
  required string receiver_public_key=4;
}
